@@ -44,6 +44,12 @@ for pre_req in ['swig', 'python']:
     if not test.where_is(pre_req):
         test.skip_test('Can not find installed "' + pre_req + '", skipping test.%s' % os.linesep)
 
+# file generated by swig will #include <Python.h>, make sure we have one
+python, py_include, py_libpath, py_lib = test.get_platform_python_info()
+Python_h = os.path.join(py_include, 'Python.h')
+if not os.path.exists(Python_h):
+    test.skip_test('Can not find %s, skipping test.\n' % Python_h)
+
 if sys.platform == 'win32':
     python_lib = os.path.dirname(sys.executable) + "/libs/" + ('python%d%d'%(sys.version_info[0],sys.version_info[1])) + '.lib'
     if( not os.path.isfile(python_lib)):
